2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/program-option.cc: rename from scm-option.cc

	* lily/scm-option.cc (LY_DEFINE): handle no-foobar option setting.
	(get_help_string): Print pretty help string.

	* scripts/lilypond-book.py (PREAMBLE_LY): add no-point-and-click
	to snippet preamble.

	* lily/scm-option.cc: remove command-line-settings option. Fold
	all command-line options plus default settings in a generic
	interface. 

	* flower/getopt-long.cc (table_string): indent 2nd lines of help
	texts too.

2005-06-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc: Bugfix: only append DIRSEP if BASE_
	or EXT_ components non-empty.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (running-from-gui?): Export.

	* lily/lily-parser-scheme.cc (ly:parse-file): Use it to generate
	output in .ly source directory.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ttftool/util.c (surely_lseek): more verbosity.

	* lily/include/lily-proto.hh: add Context_def. This fixes FC4
	compile.

	* lily/parser.yy (Repeated_music): remove >? 

	* scm/backend-library.scm (postscript->pdf): Support for
	-dgs-font-load=1

	* scm/framework-ps.scm (write-preamble): make font loading
	switchable to GS via --define-default gs-font-load=1

2005-06-09  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/global.itely: added \layout docs.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lily-parser-scheme.cc: add unistd.h

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/editor.scm: add char argument.

	* scripts/lilypond-invoke-editor.scm (dissect-uri): add char. 

	* ttftool/util.c (syserror): use errno for better error reporting.

	* lily/source-file.cc (get_counts): new function. Calc column,
	line and char count in one go.

	* lily/binary-source-file.cc (quote_input): rename to quote_input

	* lily/input.cc (set): new function.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>
