@@ -1,5 +1,13 @@
 2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/pfb.cc (LY_DEFINE): set ttf_verbosity from ttf-verbosity
+	program option.
+
+	* ttftool/include/ttftool.h ("C"): rename verbosity to
+	ttf_verbosity. Add to public interface.
+
+	* scm/music-functions.scm (unfold-repeats): remove debugging display.
+
 	* lily/program-option.cc: rename from scm-option.cc
 
 	* lily/scm-option.cc (LY_DEFINE): handle no-foobar option setting.
